# edit

./: .clang-format  .gitmodules  CMakeLists.txt  Caddyfile  Dockerfile  common.cmake  docker-compose.yml
.github/workflows/: build-and-test.yml
edit-client-terminal/: CMakeLists.txt
edit-client-terminal/include/: Action.hpp  Args.hpp  Bootstrap.hpp  BufferComponent.hpp  Bus.hpp  CommandInterpreter.hpp  Editor.hpp  Event.hpp  InputInterpreter.hpp  Point.hpp  StatusComponent.hpp  View.hpp  ViewContext.hpp
edit-client-terminal/include/components/: BufferComponent.hpp  ModeComponent.hpp  StatusComponent.hpp
edit-client-terminal/include/core/: Action.hpp  ActionTypes.hpp  Bus.hpp  Dispatcher.hpp  Event.hpp  EventTypes.hpp  Mode.hpp  Point.hpp  PointHash.hpp  Rect.hpp
edit-client-terminal/include/net/: BeastNetworkComponent.hpp  BeastNetworkConnector.hpp  INetworkComponent.hpp  INetworkConnector.hpp  NetworkConnectResult.hpp
edit-client-terminal/include/network/: BeastNetworkComponent.hpp  IMessageHandler.hpp  INetworkComponent.hpp  JsonMessageHandler.hpp
edit-client-terminal/include/state/: BufferSlice.hpp  BufferState.hpp  EditorStore.hpp  ModeSlice.hpp  ModeState.hpp  StatusSlice.hpp  StatusState.hpp
edit-client-terminal/include/ui/: BufferView.hpp  BufferViewSnapshot.hpp  IView.hpp  IViewBackend.hpp  IViewComponent.hpp  LayoutEngine.hpp  Point.hpp  Rect.hpp  StatusView.hpp  StatusViewSnapshot.hpp  TermboxBackend.hpp  TermboxView.hpp
edit-client-terminal/src/: Args.cpp  Bootstrap.cpp  BufferComponent.cpp  CommandInterpreter.cpp  Editor.cpp  InputInterpreter.cpp  Point.cpp  StatusComponent.cpp  View.cpp  ViewContext.cpp  main.cpp
edit-client-terminal/src/components/: BufferComponent.cpp  ModeComponent.cpp  StatusComponent.cpp
edit-client-terminal/src/net/: BeastNetworkComponent.cpp  BeastNetworkConnector.cpp
edit-client-terminal/src/network/: BeastNetworkComponent.cpp  JsonMessageHandler.cpp
edit-client-terminal/src/state/: BufferSlice.cpp  BufferState.cpp  EditorStore.cpp  ModeSlice.cpp  StatusSlice.cpp
edit-client-terminal/src/ui/: BufferView.cpp  LayoutEngine.cpp  LineNoView.cpp  StatusView.cpp  TermboxBackend.cpp  TermboxView.cpp
edit-client-terminal/tests/: BufferComponentTests.cpp  BufferSliceTests.cpp  BusTests.cpp  CommandInterpreterTests.cpp  DispatcherTests.cpp  EditorTests.cpp  InputInterpreterTests.cpp  MockBackend.hpp  StatusComponentTests.cpp  StatusSliceTests.cpp  StatusViewTests.cpp
edit-common/: CMakeLists.txt
edit-common/include/edit-common/: Buffer.hpp  Char.hpp  Delta.hpp
edit-common/src/: Buffer.cpp  Char.cpp  Delta.cpp
edit-common/tests/: BufferTests.cpp  CharTests.cpp  DeltaTests.cpp
edit-server/: CMakeLists.txt
edit-server/include/: BufferSession.hpp  BufferSessionManager.hpp  IDatabase.hpp  IWebSocketServer.hpp
edit-server/src/: BufferSessionManager.cpp  FileSystemDatabase.cpp  FileSystemDatabase.hpp  PerSocketData.hpp  main.cpp  uWebSocketServer.cpp  uWebSocketServer.hpp
edit-server/tests/: BufferSessionManagerTests.cpp
